# or1k-src

./: ChangeLog-OR1K  ChangeLog.or1k  README-OR1K  config.guess  config.sub  configure  configure.ac  site.exp
CVS/: Entries
bfd/: ChangeLog-OR1K  ChangeLog.or1k  Makefile.am  Makefile.in  archures.c  bfd-in2.h  coffcode.h  config.bfd  configure  configure.in  cpu-or1k.c  elf-bfd.h  elf32-or1k.c  elfnn-ia64.c  libbfd.h  reloc.c  targets.c
bfd/CVS/: Entries
bfd/doc/CVS/: Entries
bfd/hosts/CVS/: Entries
bfd/po/CVS/: Entries
binutils/: ChangeLog-OR1K  ChangeLog.or1k  readelf.c
binutils/CVS/: Entries
binutils/doc/CVS/: Entries
binutils/po/CVS/: Entries
binutils/testsuite/: ChangeLog-OR1K  ChangeLog.or1k
binutils/testsuite/CVS/: Entries
binutils/testsuite/binutils-all/: objdump.exp
blt/CVS/: Entries  Repository
blt/cf/CVS/: Repository
blt/demos/CVS/: Entries  Repository
blt/examples/CVS/: Repository
blt/html/CVS/: Repository
blt/man/CVS/: Repository
blt/src/CVS/: Entries  Repository
blt/win/CVS/: Repository
boards/: README  or1k-elf-sim.exp  or1k-linux-sim.exp
cgen/: ChangeLog-OR1K  rtl-c.scm  rtx-funcs.scm  sim-arch.scm
cgen/CVS/: Entries  Repository
cgen/cpu/CVS/: Entries  Repository
cgen/doc/CVS/: Entries  Repository
cgen/slib/CVS/: Entries  Repository
cgen/testsuite/CVS/: Entries  Repository
config/CVS/: Entries
cpu/: ChangeLog-OR1K  ChangeLog.or1k  or1k.cpu  or1k.opc  or1k32.cpu  or1kcommon.cpu  or1kor32fpx.cpu  or1korbis.cpu  or1korbis32.cpu  or1korfpx.cpu
cpu/CVS/: Entries
dejagnu/CVS/: Entries  Repository
dejagnu/baseboards/CVS/: Repository
dejagnu/config/CVS/: Repository
dejagnu/contrib/CVS/: Entries  Repository
dejagnu/debian/CVS/: Repository
dejagnu/doc/CVS/: Repository
dejagnu/example/CVS/: Repository
dejagnu/lib/CVS/: Repository
dejagnu/redhat/CVS/: Repository
dejagnu/testsuite/CVS/: Repository
elfcpp/CVS/: Entries
etc/CVS/: Entries
expat/CVS/: Entries  Repository
expat/amiga/CVS/: Repository
expat/bcb5/CVS/: Repository
expat/conftools/CVS/: Repository
expat/doc/CVS/: Repository
expat/examples/CVS/: Repository
expat/lib/CVS/: Repository
expat/tests/CVS/: Entries  Repository
expat/vms/CVS/: Repository
expat/win32/CVS/: Repository
expat/xmlwf/CVS/: Repository
expect/CVS/: Entries  Repository
expect/example/CVS/: Repository
expect/tests/CVS/: Repository
expect/testsuite/CVS/: Entries  Repository
gas/: ChangeLog-OR1K  ChangeLog.or1k  Makefile.am  Makefile.in  configure  configure.in  configure.tgt
gas/CVS/: Entries
gas/config/: tc-or1k.c  tc-or1k.h
gas/config/CVS/: Entries
gas/doc/: as.texinfo
gas/doc/CVS/: Entries
gas/po/CVS/: Entries
gas/testsuite/: ChangeLog-OR1K  ChangeLog.or1k
gas/testsuite/CVS/: Entries
gdb/: ChangeLog  ChangeLog.or1k  configure  configure.ac  configure.tgt  or1k-tdep.c  or1k-tdep.h  target-descriptions.c  target-descriptions.h
gdb/CVS/: Entries
gdb/cli/CVS/: Entries
gdb/common/CVS/: Entries
gdb/config/CVS/: Entries
gdb/contrib/CVS/: Entries
gdb/data-directory/CVS/: Entries
gdb/doc/: gdb.texinfo
gdb/doc/CVS/: Entries
gdb/features/CVS/: Entries
gdb/gdbserver/CVS/: Entries
gdb/gdbtk/CVS/: Entries
gdb/gnulib/CVS/: Entries
gdb/mi/CVS/: Entries
gdb/nat/CVS/: Entries  Repository
gdb/osf-share/CVS/: Entries
gdb/po/CVS/: Entries
gdb/python/CVS/: Entries
gold/CVS/: Entries
gprof/CVS/: Entries
include/: ChangeLog-OR1K  ChangeLog.or1k  dis-asm.h
include/CVS/: Entries
include/elf/: common.h  or1k.h
intl/CVS/: Entries
itcl/CVS/: Entries  Repository
iwidgets/CVS/: Entries  Repository
ld/: ChangeLog-OR1K  ChangeLog.or1k  Makefile.am  Makefile.in  configure.tgt
ld/CVS/: Entries
ld/emulparams/: elf32or1k.sh  elf32or1k_linux.sh
ld/testsuite/: ChangeLog-OR1K  ChangeLog.or1k
libdecnumber/CVS/: Entries
libgloss/: ChangeLog-OR1K  ChangeLog.or1k  README  configure  configure.in
libgloss/CVS/: Entries
libgloss/libnosys/: configure.in
libgloss/or1k/: COPYING  Makefile.in  _exit.c  atlys.S  close.c  config.h.in  configure  configure.in  crt0.S  environ.c  execve.c  fork.c  fstat.c  getpid.c  impure-init.c  isatty.c  kill.c  link.c  lseek.c  ml501.S  open.c  or1ksim-uart.S  or1ksim.S  ordb1a3pe1500.S  ordb2a.S  orpsocrefdesign.S  read.c  sbrk.c  sim-uart.cfg  sim.cfg  stat.c  times.c  uart.c  uart.h  unlink.c  wait.c  write.c
libgui/CVS/: Entries  Repository
libiberty/CVS/: Entries
mmalloc/CVS/: Repository
newlib/: ChangeLog-OR1K  ChangeLog.or1k  configure.host
newlib/CVS/: Entries
newlib/libc/machine/or1k/: Makefile.am  Makefile.in  configure  configure.in  longjmp.S  or1k-support-asm.S  or1k-support.c  setjmp.S
newlib/libc/machine/or1k/include/: or1k-support.h
opcodes/: ChangeLog-OR1K  ChangeLog.or1k  Makefile.am  Makefile.in  configure  configure.in  disassemble.c  or1k-asm.c  or1k-desc.c  or1k-desc.h  or1k-dis.c  or1k-ibld.c  or1k-opc.c  or1k-opc.h  or1k-opinst.c
opcodes/CVS/: Entries
proto-toplev/CVS/: Repository
rda/CVS/: Entries  Repository
readline/CVS/: Entries
sid/CVS/: Entries  Repository
sim/: ChangeLog-OR1K  ChangeLog.or1k  configure  configure.ac  configure.tgt
sim/CVS/: Entries
sim/common/: ChangeLog-OR1K  Make-common.in  cgen-accfp.c  cgen-ops.h  cgen.sh  sim-fpu.c  sim-fpu.h
sim/or1k/: ChangeLog  Makefile.in  arch.h  arch32.c  arch64.c  arch64.h  configure  configure.ac  cpu.h  cpu32.c  cpu32.h  cpu64.c  cpu64.h  cpuall.h  cpuall32.h  cpuall64.h  decode.h  decode32.c  decode32.h  decode64.c  decode64.h  eng.h  mloop.in  model32.c  model64.c  or1k-sim.h  or1k.c  or1k.h  or1k32-opc.h  or1k64-opc.h  sem32-switch.c  sem32.c  sem64-switch.c  sem64.c  sim-if.c  sim-main.h  tconfig.in  traps.c
sim/or1ksim/: ChangeLog  Makefile.in  README  config.in  configure  configure.ac  or32sim.h  wrapper.c
sim/testsuite/: ChangeLog-OR1K  ChangeLog.or1k  configure
tcl/CVS/: Entries  Repository
texinfo/CVS/: Entries
tix/CVS/: Entries  Repository
tk/CVS/: Entries  Repository
utils/CVS/: Entries
winsup/CVS/: Entries  Repository
(+1374 files in other folders)
